clusters/home/apps/maybe-finance/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybe-finance
  labels:
    app: maybe-finance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maybe-finance
  template:
    metadata:
      labels:
        app: maybe-finance
    spec:
      containers:
        - name: maybe-finance
          image: ghcr.io/maybe-finance/maybe:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: maybe-finance
              mountPath: /rails/storage
      volumes:
        - name: maybe-finance
          persistentVolumeClaim:
            claimName: maybe-finance

---
