clusters/home/apps/maybe-finance/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybe-finance
spec:
  selector:
    app: maybe-finance
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybe-finance
  labels:
    name: maybe-finance
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Personal finance tracker
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: https://avatars.githubusercontent.com/u/80786585?s=200&v=4
    gethomepage.dev/name: Maybe Finance
    gethomepage.dev/pod-selector: app=maybe-finance
    gethomepage.dev/weight: "1"
spec:
  rules:
  - host: finance.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kavita
            port: 
              number: 3000
